--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
       "@pro-widgets": ["libs/pro-widgets/src/index.ts"],
