feat(space-tracker): implement space tracker
add functional-space-tracker widget
make lines solid instead of thin lines
refactor all input parameters
add 4 themes

Closes #14

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@pro-widgets": ["libs/pro-widgets/src/index.ts"],
       "@docs": ["apps/docs/src"],
-      "@docs/*": ["apps/docs/src/*"]
+      "@docs/*": ["apps/docs/src/*"],
+      "three-full": ["node_modules/@types/three"]
     }
   },
   "exclude": ["node_modules", "tmp"]
