--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "6.3.3",
+    "three": "^0.103.0",
+    "three-full": "^17.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -63,6 +65,7 @@
     "@types/jest": "23.0.0",
     "@types/jquery": "3.3.6",
     "@types/node": "~8.9.4",
+    "@types/three": "^0.93.28",
     "codelyzer": "~4.5.0",
     "coveralls": "^3.0.3",
     "cypress": "3.1.0",
